--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,11 +1,11 @@
-@tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-@layer base {
-  body{
-    background-color: #FFF5E1;
-    color: #5A3600;
-    font-family: 'Kiwi Maru';
+@layer components {
+  body {
+    background-color: #fff5e1;
+    color: #5a3600;
+    font-family: "Kiwi Maru";
+    margin: 0;
   }
 }
